--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "phpunit/php-code-coverage": "^5.0",
         "phpstan/phpstan": "^0.9.2",
         "badges/poser": "^1.2",
-        "laravie/parser": "~1.0"
+        "laravie/parser": "~1.0",
+        "splitbrain/php-cli": "^1.1"
     },
     "autoload": {
         "psr-4": {
