--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "phpunit/php-code-coverage": "^5.0",
         "badges/poser": "^1.2",
         "laravie/parser": "~1.0",
-        "splitbrain/php-cli": "^1.1"
+        "splitbrain/php-cli": "^1.1",
+        "symfony/filesystem": "^4.0"
     },
     "autoload": {
         "psr-4": {
