--- a/composer.json
+++ b/composer.json
@@ -29,5 +29,8 @@
         "branch-alias": {
             "dev-dev": "0.x-dev"
         }
+    },
+    "require-dev": {
+        "squizlabs/php_codesniffer": "^3.3"
     }
 }
